--- a/package.json
+++ b/package.json
@@ -20,42 +20,42 @@
     "registry": "https://npm.pkg.github.com"
   },
   "dependencies": {
-    "@angular/animations": "~11.0.0-next.6",
-    "@angular/common": "~11.0.0-next.6",
-    "@angular/compiler": "~11.0.0-next.6",
-    "@angular/core": "~11.0.0-next.6",
-    "@angular/elements": "^11.0.0-next.6",
-    "@angular/forms": "~11.0.0-next.6",
-    "@angular/platform-browser": "~11.0.0-next.6",
-    "@angular/platform-browser-dynamic": "~11.0.0-next.6",
-    "@angular/router": "~11.0.0-next.6",
+    "@angular/animations": "~11.1.0",
+    "@angular/common": "~11.1.0",
+    "@angular/compiler": "~11.1.0",
+    "@angular/core": "~11.1.0",
+    "@angular/elements": "^11.1.0",
+    "@angular/forms": "~11.1.0",
+    "@angular/platform-browser": "~11.1.0",
+    "@angular/platform-browser-dynamic": "~11.1.0",
+    "@angular/router": "~11.1.0",
     "document-register-element": "^1.14.3",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.0-next.7",
-    "@angular/cli": "~11.0.0-next.7",
-    "@angular/compiler-cli": "~11.0.0-next.6",
-    "@angular/language-service": "~11.0.0-next.6",
-    "@types/jasmine": "~3.5.3",
+    "@angular-devkit/build-angular": "~0.1101.0",
+    "@angular/cli": "~11.1.0",
+    "@angular/compiler-cli": "~11.1.0",
+    "@angular/language-service": "~11.1.0",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^13.7.1",
-    "codelyzer": "^5.2.1",
+    "codelyzer": "^6.0.0",
     "cz-conventional-changelog": "^3.1.0",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.2.3",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.1",
-    "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.2",
-    "ng-packagr": "^11.0.0-next.1",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "ng-packagr": "^11.1.2",
     "protractor": "~7.0.0",
     "ts-node": "~8.6.2",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "typescript": "~4.1.3"
   },
   "config": {
     "commitizen": {
