--- a/tsconfig.json
+++ b/tsconfig.json
@@ -98,6 +98,10 @@
         "dist/table/table",
         "dist/table"
       ],
+      "stepper": [
+        "dist/stepper/stepper",
+        "dist/stepper"
+      ],
       "panel": [
         "dist/layout/panel/panel",
         "dist/layout/panel"
