--- a/package.json
+++ b/package.json
@@ -20,25 +20,25 @@
     "registry": "https://npm.pkg.github.com"
   },
   "dependencies": {
-    "@angular/animations": "~11.1.0",
-    "@angular/common": "~11.1.0",
-    "@angular/compiler": "~11.1.0",
-    "@angular/core": "~11.1.0",
-    "@angular/elements": "^11.1.0",
-    "@angular/forms": "~11.1.0",
-    "@angular/platform-browser": "~11.1.0",
-    "@angular/platform-browser-dynamic": "~11.1.0",
-    "@angular/router": "~11.1.0",
+    "@angular/animations": "~12.0.0-next.8",
+    "@angular/common": "~12.0.0-next.8",
+    "@angular/compiler": "~12.0.0-next.8",
+    "@angular/core": "~12.0.0-next.8",
+    "@angular/elements": "^12.0.0-next.8",
+    "@angular/forms": "~12.0.0-next.8",
+    "@angular/platform-browser": "~12.0.0-next.8",
+    "@angular/platform-browser-dynamic": "~12.0.0-next.8",
+    "@angular/router": "~12.0.0-next.8",
     "document-register-element": "^1.14.3",
-    "rxjs": "~6.6.3",
+    "rxjs": "~6.6.7",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1101.0",
-    "@angular/cli": "~11.1.0",
-    "@angular/compiler-cli": "~11.1.0",
-    "@angular/language-service": "~11.1.0",
+    "@angular-devkit/build-angular": "~0.1200.0-next.8",
+    "@angular/cli": "~12.0.0-next.8",
+    "@angular/compiler-cli": "~12.0.0-next.8",
+    "@angular/language-service": "~12.0.0-next.8",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^13.7.1",
@@ -46,16 +46,16 @@
     "cz-conventional-changelog": "^3.1.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.2.3",
+    "karma": "~6.3.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.1",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^11.1.2",
+    "ng-packagr": "^12.0.0-next.8",
     "protractor": "~7.0.0",
     "ts-node": "~8.6.2",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.3"
+    "typescript": "~4.2.4"
   },
   "config": {
     "commitizen": {
