--- a/angular.json
+++ b/angular.json
@@ -993,6 +993,37 @@
           }
         }
       }
+    },
+    "banner": {
+      "projectType": "library",
+      "root": "projects/feedback/banner",
+      "sourceRoot": "projects/feedback/banner/src",
+      "prefix": "xcu",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/feedback/banner/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/feedback/banner/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/feedback/banner/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/feedback/banner/src/test.ts",
+            "tsConfig": "projects/feedback/banner/tsconfig.spec.json",
+            "karmaConfig": "projects/feedback/banner/karma.conf.js"
+          }
+        }
+      }
     }
   },
   "defaultProject": "core"
