--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "@angular/platform-browser-dynamic": "~12.1.0-next.2",
     "@angular/router": "~12.1.0-next.2",
     "document-register-element": "^1.14.3",
-    "rxjs": "~6.6.7",
-    "tslib": "^2.0.0",
+    "rxjs": "~7.0.1",
+    "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -39,21 +39,21 @@
     "@angular/cli": "~12.1.0-next.2",
     "@angular/compiler-cli": "~12.1.0-next.2",
     "@angular/language-service": "~12.1.0-next.2",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^13.7.1",
-    "codelyzer": "^6.0.0",
+    "@types/jasmine": "~3.7.4",
+    "@types/jasminewd2": "~2.0.9",
+    "@types/node": "^15.3.1",
+    "codelyzer": "^6.0.2",
     "cz-conventional-changelog": "^3.1.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
+    "jasmine-core": "~3.7.1",
+    "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.3.2",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.1",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^12.0.0-next.8",
+    "karma-jasmine-html-reporter": "^1.6.0",
+    "ng-packagr": "^12.0.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.6.2",
+    "ts-node": "~9.1.1",
     "tslint": "~6.1.0",
     "typescript": "~4.2.4"
   },
