--- a/projects/table/package.json
+++ b/projects/table/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^10.0.5",
-    "@angular/core": "^10.0.5"
+    "@angular/core": "^10.0.5",
+    "@multiplicu/ui": "^1.2.8"
   },
   "dependencies": {
     "tslib": "^2.0.0"
