--- a/package.json
+++ b/package.json
@@ -20,25 +20,25 @@
     "registry": "https://npm.pkg.github.com"
   },
   "dependencies": {
-    "@angular/animations": "~12.1.0-next.2",
-    "@angular/common": "~12.1.0-next.2",
-    "@angular/compiler": "~12.1.0-next.2",
-    "@angular/core": "~12.1.0-next.2",
-    "@angular/elements": "^12.1.0-next.2",
-    "@angular/forms": "~12.1.0-next.2",
-    "@angular/platform-browser": "~12.1.0-next.2",
-    "@angular/platform-browser-dynamic": "~12.1.0-next.2",
-    "@angular/router": "~12.1.0-next.2",
+    "@angular/animations": "~12.2.9",
+    "@angular/common": "~12.2.9",
+    "@angular/compiler": "~12.2.9",
+    "@angular/core": "~12.2.9",
+    "@angular/elements": "^12.2.9",
+    "@angular/forms": "~12.2.9",
+    "@angular/platform-browser": "~12.2.9",
+    "@angular/platform-browser-dynamic": "~12.2.9",
+    "@angular/router": "~12.2.9",
     "document-register-element": "^1.14.3",
     "rxjs": "~7.0.1",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.1.0-next.2",
-    "@angular/cli": "~12.1.0-next.2",
-    "@angular/compiler-cli": "~12.1.0-next.2",
-    "@angular/language-service": "~12.1.0-next.2",
+    "@angular-devkit/build-angular": "~12.2.9",
+    "@angular/cli": "~12.2.9",
+    "@angular/compiler-cli": "~12.2.9",
+    "@angular/language-service": "~12.2.9",
     "@types/jasmine": "~3.7.4",
     "@types/jasminewd2": "~2.0.9",
     "@types/node": "^15.3.1",
