--- a/projects/button/package.json
+++ b/projects/button/package.json
@@ -8,10 +8,10 @@
     "registry": "https://npm.pkg.github.com"
   },
   "peerDependencies": {
-    "@angular/common": "^9.0.0",
-    "@angular/core": "^9.0.0"
-},
+    "@angular/common": "^13.0.0-next.15",
+    "@angular/core": "^13.0.0-next.15"
+  },
   "dependencies": {
-    "tslib": "^2.0.0"
+    "tslib": "^2.3.1"
   }
 }
