chore: bump version to 1.4.11

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -143,6 +143,7 @@
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
-    "strictInjectionParameters": true
+    "strictInjectionParameters": true,
+    "enableIvy": true,
   }
 }
