--- a/projects/ui/package.json
+++ b/projects/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@multiplicu/ui",
-  "version": "1.4.17",
+  "version": "2.0.0-next.4",
   "repository": {
     "url": "git://github.com/multiplicu/ui.git"
   },
