--- a/package.json
+++ b/package.json
@@ -20,25 +20,25 @@
     "registry": "https://npm.pkg.github.com"
   },
   "dependencies": {
-    "@angular/animations": "~14.2.11",
-    "@angular/common": "~14.2.11",
-    "@angular/compiler": "~14.2.11",
-    "@angular/core": "~14.2.11",
+    "@angular/animations": "^14.2.11",
+    "@angular/common": "^14.2.11",
+    "@angular/compiler": "^14.2.11",
+    "@angular/core": "^14.2.11",
     "@angular/elements": "^14.2.11",
-    "@angular/forms": "~14.2.11",
-    "@angular/platform-browser": "~14.2.11",
-    "@angular/platform-browser-dynamic": "~14.2.11",
-    "@angular/router": "~14.2.11",
+    "@angular/forms": "^14.2.11",
+    "@angular/platform-browser": "^14.2.11",
+    "@angular/platform-browser-dynamic": "^14.2.11",
+    "@angular/router": "^14.2.11",
     "document-register-element": "^1.14.3",
     "rxjs": "~7.5.5",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~14.2.10",
-    "@angular/cli": "~14.2.10",
-    "@angular/compiler-cli": "~14.2.11",
-    "@angular/language-service": "~14.2.11",
+    "@angular-devkit/build-angular": "^14.2.10",
+    "@angular/cli": "^14.2.10",
+    "@angular/compiler-cli": "^14.2.11",
+    "@angular/language-service": "^14.2.11",
     "@types/jasmine": "~3.7.4",
     "@types/jasminewd2": "~2.0.9",
     "@types/node": "^15.3.1",
