--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "module": "es2020",
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2020",
+    "target": "ES2022",
     "typeRoots": [
       "node_modules/@types"
     ],
@@ -19,7 +19,9 @@
       "dom"
     ],
     "paths": {
-      "@angular/*": ["node_modules/@angular/*"],
+      "@angular/*": [
+        "node_modules/@angular/*"
+      ],
       "ui": [
         "dist/ui"
       ],
@@ -139,7 +141,8 @@
         "dist/ui/form/radio/radio",
         "dist/ui/form/radio"
       ]
-    }
+    },
+    "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
