--- a/package.json
+++ b/package.json
@@ -20,25 +20,25 @@
     "registry": "https://npm.pkg.github.com"
   },
   "dependencies": {
-    "@angular/animations": "^16.1.0-next.0",
-    "@angular/common": "^16.1.0-next.0",
-    "@angular/compiler": "^16.1.0-next.0",
-    "@angular/core": "^16.1.0-next.0",
-    "@angular/elements": "^16.1.0-next.0",
-    "@angular/forms": "^16.1.0-next.0",
-    "@angular/platform-browser": "^16.1.0-next.0",
-    "@angular/platform-browser-dynamic": "^16.1.0-next.0",
-    "@angular/router": "^16.1.0-next.0",
+    "@angular/animations": "^15.0.0",
+    "@angular/common": "^15.0.0",
+    "@angular/compiler": "^15.0.0",
+    "@angular/core": "^15.0.0",
+    "@angular/elements": "^15.0.0",
+    "@angular/forms": "^15.0.0",
+    "@angular/platform-browser": "^15.0.0",
+    "@angular/platform-browser-dynamic": "^15.0.0",
+    "@angular/router": "^15.0.0",
     "document-register-element": "^1.14.3",
     "rxjs": "~7.5.5",
     "tslib": "^2.3.1",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.0",
-    "@angular/cli": "^16.0.0",
-    "@angular/compiler-cli": "^16.1.0-next.0",
-    "@angular/language-service": "^16.1.0-next.0",
+    "@angular-devkit/build-angular": "^15.0.0",
+    "@angular/cli": "^15.0.0",
+    "@angular/compiler-cli": "^15.0.0",
+    "@angular/language-service": "^15.0.0",
     "@types/jasmine": "~3.7.4",
     "@types/jasminewd2": "~2.0.9",
     "@types/node": "^15.3.1",
@@ -51,11 +51,11 @@
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.6.0",
-    "ng-packagr": "^16.0.1",
+    "ng-packagr": "^15.0.0",
     "protractor": "~7.0.0",
     "ts-node": "~9.1.1",
     "tslint": "~6.1.0",
-    "typescript": "~5.0.4"
+    "typescript": "~4.8.4"
   },
   "config": {
     "commitizen": {
